--- a/style.css
+++ b/style.css
@@ -39,3 +39,71 @@ div.text {
   font-weight: 800;
   font-size: 14px;
 }
+body {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.one {
+  background: pink;
+  border: 3px solid blue;
+  /* CHANGE ME */
+  padding: 32px;
+  margin: 12px 30px;
+}
+
+.two {
+  background: lightblue;
+  border: 3px solid purple;
+  /* CHANGE ME */
+  margin-bottom: 48px;
+}
+
+.three {
+  background: peachpuff;
+  border: 3px solid brown;
+  width: 200px;
+  /* CHANGE ME */
+  padding: 32px;
+  margin-right: auto;
+}
+
+
+body {
+  background: #eee;
+  font-family: sans-serif;
+}
+
+.card {
+  width: 400px;
+  background: #fff;
+  margin: 16px auto;
+  padding: 8px;
+}
+
+.title {
+    padding: 8px;
+  background: #e3f4ff;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.content {
+    margin-bottom: 8px;
+    padding: 16px 8px;
+  background: #e3f4ff;
+}
+
+.button-container {
+  background: #e3f4ff;
+  text-align: center;
+  padding: 8px;
+}
+
+button {
+    display: block;
+  background: white;
+ margin: 0 auto;
+  padding: 8px 24px;
+  border: 1px solid #eee;
+}
